--- a/meta-incredible-machine/conf/distro/incredible.conf
+++ b/meta-incredible-machine/conf/distro/incredible.conf
@@ -14,6 +14,7 @@ DISTRO_FEATURES_NATIVESDK = ""
 IMAGE_NAME[vardepsexclude] = "DATETIME"
 IMAGE_NAME = "${IMAGE_BASENAME}-${DISTRO_VERSION}-${DISTRO_CODENAME}-${MACHINE}-${DATETIME}"
 IMAGE_LINK_NAME = "${IMAGE_BASENAME}-${DISTRO_VERSION}-${DISTRO_CODENAME}-${MACHINE}"
+IMAGE_FSTYPES = "tar.bz2 wic.bz2"
 
 SDK_VERSION = "${DISTRO_VERSION}-${DISTRO_CODENAME}"
 
