Add nano to incredible-development-image and set it as default editor.

--- a/meta-incredible-machine/conf/distro/incredible.conf
+++ b/meta-incredible-machine/conf/distro/incredible.conf
@@ -19,6 +19,7 @@ IMAGE_FSTYPES = "tar.bz2 wic.bz2"
 SDK_VERSION = "${DISTRO_VERSION}-${DISTRO_CODENAME}"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
+VIRTUAL-RUNTIME_editor = "nano"
 
 SANITY_TESTED_DISTROS = "\
     ubuntu-22.04 \n \
