Set shellcheck default shell.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
           meta-raspberrypi
           poky
         additional_files: docker
+      env:
+        SHELLCHECK_OPTS: --shell=bash
 
   yocto-build:
     name: Yocto build in docker
